# trial

./: README.md
be/: .dockerignore  .gitignore  Dockerfile  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
be/src/: index.ts  listener.ts  types.ts
be/src/db/: schema.ts
be/src/routes/: ipfs.ts  tokens.ts
fe/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
fe/src/: App.tsx  AppProviders.tsx  index.css  main.tsx
fe/src/components/: DisconnectBanner.tsx  ErrorBoundary.tsx  LoadingSkeleton.tsx
fe/src/components/home/: SearchBar.tsx  SortTabs.tsx  TokenCard.tsx
fe/src/hooks/: useCreateToken.ts  useSeamlessRefresh.ts  useTokens.ts  useWalletDisconnect.ts
fe/src/idl/: smooth.json
fe/src/pages/: AdminPage.tsx  CreateTokenPage.tsx  HomePage.tsx  TokenPage.tsx
fe/src/providers/: WalletProvider.tsx
fe/src/services/: duplicateCheck.ts  ipfs.ts  tokenService.ts  tradingService.ts
fe/src/styles/: moonshot.css
fe/src/types/: token.ts
fe/src/utils/: bondingCurve.ts  responsive.ts  solana.ts
moonshot/: package-lock.json
moonshot/tests/: trial.ts
trial-be/: .env  .gitignore  package.json  tsconfig.json
trial-be/src/: index.ts  listener.ts  types.ts
trial-be/src/db/: index.ts  schema.ts
trial-be/src/routes/: tokens.ts
trial2/: Anchor.toml  Cargo.toml  package.json
trial2/programs/trial/: Cargo.toml
trial2/programs/trial2/: Cargo.toml
trial2/programs/trial2/src/: curve.rs  lib.rs
trial2/tests/: trial-day4.ts  trial.ts
(+7 files in other folders)
