[package]
name = "trial2"
version = "0.1.0"
description = "trial2 — token launchpad with bonding curve on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trial2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token"] }

[profile.release]
overflow-checks = true